package CasseTete;

import javafx.scene.text.Text;

public class CellSymbol extends Cell {

    public CellSymbol(int x, int y, boolean occupied, String symbol) {
        super(x, y, occupied, symbol);
    }
}
