@startuml

title __JAVA_PROJECT's Class Diagram__\n

  namespace CasseTete {
    abstract class CasseTete.Cell.Cell {
    }
  }
  

  namespace CasseTete {
    class CasseTete.Cell.CellPath {
    }
  }
  

  namespace CasseTete {
    class CasseTete.Cell.CellSymbol {
    }
  }
  

  namespace CasseTete {
    class CasseTete.Model {
    }
  }
  

  namespace CasseTete {
    class CasseTete.PathCoordinate {
    }
  }
  

  namespace CasseTete {
    class CasseTete.View {
    }
  }
  

  CasseTete.Cell.CellPath -up-|> CasseTete.Cell.Cell
  CasseTete.Cell.CellPath o-- CasseTete.PathCoordinate : pathEntry
  CasseTete.Cell.CellPath o-- CasseTete.PathCoordinate : pathExit
  CasseTete.Cell.CellSymbol -up-|> CasseTete.Cell.Cell
  CasseTete.Model -up-|> java.util.Observable
  CasseTete.View -up-|> javafx.application.Application
  CasseTete.View o-- CasseTete.Model : model


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
